# motif-discovery

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile  README  README.md  colorcount.hpp  colorcount_simple.hpp  dynamic_table.hpp  dynamic_table_array.hpp  en_masse.sh  ensemble.cpp  fascia.cpp  fascia.h  fascia_wszystkie.sh  filter.py  filter.sh  graph.hpp  hpylo.graph  hpylo_labeled.graph  index.html  load_graph.hpp  nba.graph  niter.py  output.hpp  partitioner.hpp  plot_gdd.r  run_motif.sh  script.py  srednia_fascii.py  srednia_losowych.py  srednia_losowych.sh  test_small.graph  util.hpp  wykres.py
FASCIA/: AUTHORS  COPYING  ChangeLog  Niter.py  README  colorcount.hpp  colorcount_simple.hpp  dynamic_table.hpp  dynamic_table_array.hpp  fascia.cpp  fascia.h  graph.hpp  output.hpp  partitioner.hpp  plot_gdd.r  template_labeled.graph  util.hpp
Wizualizacje/: Scerevisiae_means.csv  ecoli.csv  fascia_res_mr.csv  filmweb10k_means.csv  filmweb15k_means.csv  filmweb20k_means.csv  filmweb5k_means.csv  fr_new.csv  hpylo-nonmulti_means.csv  mr_coli.csv  resultsCalc.ipynb  resultsColi.txt  resultsFilmweb2577v3136e.txt  resultsFilmweb3395v6048e.txt  resultsFilmweb3984v10288e.txt  resultsFilmweb4627v18965e.txt  resultsNBA4800v146370e.txt  resultsScerevisiae.txt  resultshpylo.txt
motif/: Tree generation.ipynb
sieci/: Scerevisiae_new.graph  Scerevisiae_new.txt  ecoli.graph  ecoli.txt  filmweb10k.graph  filmweb10k.txt  filmweb15k.graph  filmweb15k.txt  filmweb20k.graph  filmweb20k.txt  filmweb5k.graph  filmweb5k.txt  hpylo-nonmulti.graph  (+3 more)
(+2294 files in other folders)
